@@ -18,6 +18,9 @@ Core and builtins
 Extensions Modules
 ------------------
 
+- Issue #2670:  Fix a failure in urllib2.build_opener(), when passed two
+  handlers that derive the same default base class.
+
 - Added kill, terminate and send_signal(sig) to subprocess.Popen.
 
 - Added phase(z) -> phi, polar(z) -> r, phi and rect(r, phi) -> z to the cmath
